correção tela inicial

--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -1,18 +1,14 @@
 body{
-    background-color: #1E8871;
-    background-image: url(../img/fundo.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
+    background-color: #F0F0F0;
 }
-   
+    
 #centro {  
     width: 25%; 
     height: 100%;
-    margin: 12% 0% 2% 36%;
+    margin:5% 0% 2% 36%;
     float: left;
-    color:#ffffff;
-    background-color: rgba(0,0,0,0.40);
+    color:#ffffff; 
+    background-color: rgba(0,0,0,0.60);
     font-size: 12px;
 }
 
