--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -3,12 +3,12 @@ body{
 }
     
 #centro {  
-    width: 25%; 
+    width:340px; 
     height: 100%;
     margin:5% 0% 2% 36%;
     float: left;
     color:#ffffff; 
-    background-color: rgba(0,0,0,0.60);
+    background-color: rgba(0,0,0,0.68);
     font-size: 12px;
 }
 
